# semantic_coloring_search_editor

./: .gitignore  .vscodeignore  LICENSE.md  README.md  README_EN.md  package.json
file_walker/: Cargo.toml
file_walker/src/: lib.rs  main.rs
src/: extension.ts
src/history/: search-history.ts
src/search/: file-pattern-parser.ts  result-converter.ts  search-engine.ts
src/types/: interfaces.ts
src/ui/: webview-content.ts  webview-loader.ts  webview.css  webview.html  webview.js
