[package]
name = "file_walker"
version = "0.1.0"
edition = "2021"

[dependencies]
ignore = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
grep-searcher = "0.1"
grep-matcher = "0.1"
grep-regex = "0.1"
regex = "1.0"
clap = { version = "4.0", features = ["derive"] }
globset = "0.4"

[[bin]]
name = "file_walker"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
